<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuestionActivity">
<LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F30505"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <TextView
            android:id="@+id/quest_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/_1_10"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>
    <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
</LinearLayout>
    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="#E99C03"
            android:elevation="3dp"
            android:padding="16dp"
            android:text="@string/option_1"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="#E99C03"
            android:elevation="3dp"
            android:padding="16dp"
            android:text="@string/option_2"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="#E99C03"
            android:elevation="3dp"
            android:padding="16dp"
            android:text="@string/option_3"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
            android:id="@+id/countdown"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_10"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/round_corner"
            android:backgroundTint="#E99C03"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>


