<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
<LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PsychoToday"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About us"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goQuestionActivity"
                android:background="@drawable/circle"
                android:backgroundTint="#6846A5"
                android:layout_marginStart="50dp"/>
        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"
                android:backgroundTint="#FB7777"
                android:layout_marginStart="100dp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Tests"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"/>
            <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/testdescription"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="Recommendations"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recdescription"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">
        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goQuestionActivity"
                android:background="@drawable/circle"
                android:backgroundTint="#00BCD4"
                android:layout_marginStart="50dp"
             />
        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"
                android:backgroundTint="#FFC107"
                android:layout_marginStart="100dp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Articles"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"/>
            <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/articledec"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="Books"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookdec"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>